@@ -1,4 +1,12 @@
 2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>
+	
+	* Source/DKIntrospectionNode.h
+	* Source/DKIntrospectionNode.m:
+	Declare -XMLNode on all introspection nodes.
+	* Source/DKMethod.m: Implement generation of MXL introspection data.
+	* Tests(TestDKMethod.m: Add test for XML introspection data generation.
+
+2012-01-27 Niels Grewe <niels.grewe@halbordnung.de>
 
 	* Tests/TestDKArgument.m: Add test for annotated XML introspection data.
 	
